--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   flutter_local_notifications: ^9.9.1
   intl: ^0.17.0
   provider: ^6.0.3
+  rxdart: ^0.27.5
+  sqflite: ^2.0.3+1
   timezone: ^0.8.0
 
 dev_dependencies:
